RadzenLayout components should not have 100vw on mobile screens. Resolves #1956

--- a/Radzen.Blazor/themes/components/blazor/_layout.scss
+++ b/Radzen.Blazor/themes/components/blazor/_layout.scss
@@ -65,12 +65,6 @@ $layout-background-color: var(--rz-body-background-color) !default;
     height: 100dvh;
   }
 
-  .rz-header,
-  .rz-footer,
-  .rz-body {
-    width: 100vw;
-  }
-
   // Align layout to the end when second Sidebar is expanded
   .rz-layout:has( > .rz-sidebar-collapsed + .rz-sidebar-expanded) {
     justify-content: end;
